add build script

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
         <meta-data android:name="ApplicationName" android:value="com.example.sourceapk.MyApplication"/>
-        <activity android:name="com.example.sourceapk.MainActivity">
+        <activity
+            android:name="com.example.sourceapk.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
